lighttpd/lighttpd-1.4.68/futag-fuzz-drivers/failed/buffer_commit/buffer_commit3/buffer_commit3.err
/home/futag/Futag-tests/lighttpd/lighttpd-1.4.68/.futag-fuzz-drivers/buffer_commit/buffer_commit3/buffer_commit3.c:20:19: error: use of undeclared identifier 's__b'
    buffer_commit(s__b ,b_size );
                  ^
1 error generated.
